infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zdash
  labels:
    name: zdash
